# generate-dhcp-dns

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  rustfmt.toml
src/: create_dhcp_config.rs  create_dns_config.rs  create_reverse_dns_config.rs  lib.rs  main.rs  parser.rs  validation.rs
tests/: common.rs  validation_tests.rs
